finalize next steps pop up

--- a/index.html
+++ b/index.html
@@ -214,57 +214,72 @@
         </p>
       </div> -->
 
-      <!-- Renting vs. Owning: Building Generational Wealth -->
-      <div class="blank"></div>
-      <h3>Who owns homes in Richmond?</h3>
-      <p>
-        Homeownership is one of the primary methods for building generational
-        wealth and accessing the improved quality-of-life that comes with it.
-        Owning a home can provide greater stability than renting by allowing
-        residents to stay in their community, build long-term equity, and to
-        invest in their community’s education and other public services
-        through their home’s property taxes.  Like many other cities in
-        California, Richmond’s homeownership has often been restricted to
-        wealthy white neighborhoods and maintained through policies such as
-        Proposition 13, which defines state increase in property tax. 
-      </p>
-      <div class="tableauPlaceholder" id="viz1683257775144" style="position: relative">
-        <noscript><a href="#"><img alt="Homeowners by Race in Richmond, 2021 "
-              src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;re&#47;renterownermaps&#47;owner_bar&#47;1_rss.png"
-              style="border: none" /></a></noscript><object class="tableauViz" style="display: none">
-          <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
-          <param name="embed_code_version" value="3" />
-          <param name="site_root" value="" />
-          <param name="name" value="renterownermaps&#47;owner_bar" />
-          <param name="tabs" value="no" />
-          <param name="toolbar" value="yes" />
-          <param name="static_image"
-            value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;re&#47;renterownermaps&#47;owner_bar&#47;1.png" />
-          <param name="animate_transition" value="yes" />
-          <param name="display_static_image" value="yes" />
-          <param name="display_spinner" value="yes" />
-          <param name="display_overlay" value="yes" />
-          <param name="display_count" value="yes" />
-          <param name="language" value="en-US" />
-          <param name="filter" value="publish=yes" />
-        </object>
-      </div>
-      <script type="text/javascript">
-        var divElement = document.getElementById("viz1683257775144");
-        var vizElement = divElement.getElementsByTagName("object")[0];
-        vizElement.style.width = "100%";
-        vizElement.style.height = "250px";
-        var scriptElement = document.createElement("script");
-        scriptElement.src =
-          "https://public.tableau.com/javascripts/api/viz_v1.js";
-        vizElement.parentNode.insertBefore(scriptElement, vizElement);
-      </script>
-      <p>
-        In Richmond, white residents own homes at more than <span class="emphasis_red">2x</span> the rate of Black
-        residents and <span class="emphasis_red">1.3x</span> that of Hispanic residents. Meanwhile, Hispanic residents
-        rent almost 2x more and Black residents rent around 1.5x more than White residents.
-      </p>
-      <div class="blank_sm"></div>
+        <!-- Renting vs. Owning: Building Generational Wealth -->
+        <div class="blank"></div>
+        <h3>Who owns homes in Richmond?</h3>
+        <p>
+          Homeownership is one of the primary methods for building generational
+          wealth and accessing the improved quality-of-life that comes with it.
+          Owning a home can provide greater stability than renting by allowing
+          residents to stay in their community, build long-term equity, and to
+          invest in their community’s education and other public services
+          through their home’s property taxes.  Like many other cities in
+          California, Richmond’s homeownership has often been restricted to
+          wealthy white neighborhoods and maintained through policies such as
+          Proposition 13, which defines state increase in property tax. 
+        </p>
+        <div
+          class="tableauPlaceholder"
+          id="viz1683257775144"
+          style="position: relative"
+        >
+          <noscript
+            ><a href="#"
+              ><img
+                alt="Homeowners by Race in Richmond, 2021 "
+                src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;re&#47;renterownermaps&#47;owner_bar&#47;1_rss.png"
+                style="border: none" /></a></noscript
+          ><object class="tableauViz" style="display: none">
+            <param
+              name="host_url"
+              value="https%3A%2F%2Fpublic.tableau.com%2F"
+            />
+            <param name="embed_code_version" value="3" />
+            <param name="site_root" value="" />
+            <param name="name" value="renterownermaps&#47;owner_bar" />
+            <param name="tabs" value="no" />
+            <param name="toolbar" value="yes" />
+            <param
+              name="static_image"
+              value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;re&#47;renterownermaps&#47;owner_bar&#47;1.png"
+            />
+            <param name="animate_transition" value="yes" />
+            <param name="display_static_image" value="yes" />
+            <param name="display_spinner" value="yes" />
+            <param name="display_overlay" value="yes" />
+            <param name="display_count" value="yes" />
+            <param name="language" value="en-US" />
+            <param name="filter" value="publish=yes" />
+          </object>
+        </div>
+        <script type="text/javascript">
+          var divElement = document.getElementById("viz1683257775144");
+          var vizElement = divElement.getElementsByTagName("object")[0];
+          vizElement.style.width = "100%";
+          vizElement.style.height = "250px";
+          var scriptElement = document.createElement("script");
+          scriptElement.src =
+            "https://public.tableau.com/javascripts/api/viz_v1.js";
+          vizElement.parentNode.insertBefore(scriptElement, vizElement);
+        </script>
+        <p>
+          In Richmond, white residents own homes at more than
+          <span class="emphasis_red">2x</span> the rate of Black residents and
+          <span class="emphasis_red">1.3x</span> that of Hispanic residents.
+          Meanwhile, Hispanic residents rent almost 2x more and Black residents
+          rent around 1.5x more than White residents.
+        </p>
+        <div class="blank_sm"></div>
 
         <!-- Evictions -->
         <h3>Who faces eviction?</h3>
@@ -364,7 +379,10 @@
           src="staticFiles\images\eviction_map\eviction_rate_iso.svg"
           style="width: 60%; position: relative; left: 22.5%"
         />
-        <div class="content_center" style="padding-top: 80px;display:flex;justify-content:center;">
+        <div
+          class="content_center"
+          style="padding-top: 80px; display: flex; justify-content: center"
+        >
           <div
             class="tableauPlaceholder"
             id="viz1683250275111"
@@ -463,7 +481,7 @@
         </p>
       </div>
     </div>
-    <div class="section_wide" style="margin-left:200px;">
+    <div class="section_wide" style="margin-left: 200px">
       <div class="content_med">
         <h3>Implicit Racism in Housing</h3>
         <img
@@ -521,7 +539,7 @@
     ></iframe>
 
     <div class="blank_sm"></div>
-    
+
     <div
       class="tableauPlaceholder"
       id="viz1683485715948"
@@ -682,11 +700,7 @@
 
     <!-- What's the fix? -->
     <div class="blank"></div>
-    <div
-      class="section_wide"
-      id="solutions_menu"
-      style="margin-bottom: -75px !important"
-    >
+    <div class="section_wide" id="solutions_menu">
       <div class="content_wide">
         <h2>What's the Fix?</h2>
         <p>
@@ -708,126 +722,63 @@
         </p>
       </div>
     </div>
-    <div
-      class="tableauPlaceholder"
-      id="viz1683484503623"
-      style="position: relative"
-    >
-      <noscript
-        ><a href="#"
-          ><img
-            alt="Dashboard 1 "
-            src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;so&#47;solutions-menu&#47;Dashboard1&#47;1_rss.png"
-            style="border: none" /></a></noscript
-      ><object class="tableauViz" style="display: none">
-        <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
-        <param name="embed_code_version" value="3" />
-        <param name="site_root" value="" />
-        <param name="name" value="solutions-menu&#47;Dashboard1" />
-        <param name="tabs" value="no" />
-        <param name="toolbar" value="yes" />
-        <param
-          name="static_image"
-          value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;so&#47;solutions-menu&#47;Dashboard1&#47;1.png"
-        />
-        <param name="animate_transition" value="yes" />
-        <param name="display_static_image" value="yes" />
-        <param name="display_spinner" value="yes" />
-        <param name="display_overlay" value="yes" />
-        <param name="display_count" value="yes" />
-        <param name="language" value="en-US" />
-        <param name="filter" value="publish=yes" />
-      </object>
+    <div style="height: 800px">
+      <div
+        class="tableauPlaceholder"
+        id="viz1683484503623"
+        style="position: relative"
+      >
+        <noscript
+          ><a href="#"
+            ><img
+              alt="Dashboard 1 "
+              src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;so&#47;solutions-menu&#47;Dashboard1&#47;1_rss.png"
+              style="border: none" /></a></noscript
+        ><object class="tableauViz" style="display: none">
+          <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
+          <param name="embed_code_version" value="3" />
+          <param name="site_root" value="" />
+          <param name="name" value="solutions-menu&#47;Dashboard1" />
+          <param name="tabs" value="no" />
+          <param name="toolbar" value="yes" />
+          <param
+            name="static_image"
+            value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;so&#47;solutions-menu&#47;Dashboard1&#47;1.png"
+          />
+          <param name="animate_transition" value="yes" />
+          <param name="display_static_image" value="yes" />
+          <param name="display_spinner" value="yes" />
+          <param name="display_overlay" value="yes" />
+          <param name="display_count" value="yes" />
+          <param name="language" value="en-US" />
+          <param name="filter" value="publish=yes" />
+        </object>
+      </div>
+      <script type="text/javascript">
+        var divElement = document.getElementById("viz1683484503623");
+        var vizElement = divElement.getElementsByTagName("object")[0];
+        if (divElement.offsetWidth > 800) {
+          vizElement.style.width = "100%";
+          vizElement.style.maxWidth = "4000px";
+          vizElement.style.height = divElement.offsetWidth * 0.75 + "px";
+          vizElement.style.maxHeight = "627px";
+        } else if (divElement.offsetWidth > 500) {
+          vizElement.style.width = "100%";
+          vizElement.style.maxWidth = "4000px";
+          vizElement.style.height = divElement.offsetWidth * 0.75 + "px";
+          vizElement.style.maxHeight = "627px";
+        } else {
+          vizElement.style.width = "100%";
+          vizElement.style.height = "727px";
+        }
+        var scriptElement = document.createElement("script");
+        scriptElement.src =
+          "https://public.tableau.com/javascripts/api/viz_v1.js";
+        vizElement.parentNode.insertBefore(scriptElement, vizElement);
+      </script>
     </div>
-    <script type="text/javascript">
-      var divElement = document.getElementById("viz1683484503623");
-      var vizElement = divElement.getElementsByTagName("object")[0];
-      if (divElement.offsetWidth > 800) {
-        vizElement.style.width = "100%";
-        vizElement.style.maxWidth = "4000px";
-        vizElement.style.height = divElement.offsetWidth * 0.75 + "px";
-        vizElement.style.maxHeight = "627px";
-      } else if (divElement.offsetWidth > 500) {
-        vizElement.style.width = "100%";
-        vizElement.style.maxWidth = "4000px";
-        vizElement.style.height = divElement.offsetWidth * 0.75 + "px";
-        vizElement.style.maxHeight = "627px";
-      } else {
-        vizElement.style.width = "100%";
-        vizElement.style.height = "727px";
-      }
-      var scriptElement = document.createElement("script");
-      scriptElement.src =
-        "https://public.tableau.com/javascripts/api/viz_v1.js";
-      vizElement.parentNode.insertBefore(scriptElement, vizElement);
-    </script>
-  <!-- What's the fix? -->
-  <div class="section_wide" id="solutions_menu" style="margin-bottom: -75px !important">
-    <div class="content_wide">
-      <h2>What's the Fix?</h2>
-      <p>
-        There are no quick fixes to the housing crisis affecting residents in
-        Richmond and beyond, but there are many efforts in motion attempting
-        to move towards housing justice.
-      </p>
-      <p>
-        Below, we’ve summarized these interventions across three themes:
-        <span class="emphasis_p">Production, Preservation, and Protection.</span>
-        We need movement across all of these areas and more; as we see
-        earlier, some of these solutions can seem to be in direct conflict.
-      </p>
-      <p>
-        <span class="emphasis_red">Click on the circles</span> in the chart
-        below to learn more about different solutions.
-      </p>
-    </div>
-  </div>
-  <div class="tableauPlaceholder" id="viz1683484503623" style="position: relative; max-height:600px;">
-    <noscript><a href="#"><img alt="Dashboard 1 "
-          src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;so&#47;solutions-menu&#47;Dashboard1&#47;1_rss.png"
-          style="border: none" /></a></noscript><object class="tableauViz" style="display: none">
-      <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
-      <param name="embed_code_version" value="3" />
-      <param name="site_root" value="" />
-      <param name="name" value="solutions-menu&#47;Dashboard1" />
-      <param name="tabs" value="no" />
-      <param name="toolbar" value="yes" />
-      <param name="static_image"
-        value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;so&#47;solutions-menu&#47;Dashboard1&#47;1.png" />
-      <param name="animate_transition" value="yes" />
-      <param name="display_static_image" value="yes" />
-      <param name="display_spinner" value="yes" />
-      <param name="display_overlay" value="yes" />
-      <param name="display_count" value="yes" />
-      <param name="language" value="en-US" />
-      <param name="filter" value="publish=yes" />
-    </object>
-  </div>
-  <script type="text/javascript">
-    var divElement = document.getElementById("viz1683484503623");
-    var vizElement = divElement.getElementsByTagName("object")[0];
-    if (divElement.offsetWidth > 800) {
-      vizElement.style.width = "100%";
-      vizElement.style.maxWidth = "4000px";
-      vizElement.style.height = divElement.offsetWidth * 0.75 + "px";
-      vizElement.style.maxHeight = "627px";
-    } else if (divElement.offsetWidth > 500) {
-      vizElement.style.width = "100%";
-      vizElement.style.maxWidth = "4000px";
-      vizElement.style.height = divElement.offsetWidth * 0.75 + "px";
-      vizElement.style.maxHeight = "627px";
-    } else {
-      vizElement.style.width = "100%";
-      vizElement.style.height = "727px";
-    }
-    var scriptElement = document.createElement("script");
-    scriptElement.src =
-      "https://public.tableau.com/javascripts/api/viz_v1.js";
-    vizElement.parentNode.insertBefore(scriptElement, vizElement);
-  </script>
 
     <div class="blank_sm"></div>
-
     <!-- Conclusion -->
     <div class="center_section" id="imagine_future">
       <div id="conclusion" class="content_center">
@@ -865,71 +816,71 @@
 
     <div id="popups">
       <div class="popup" id="popup1">
-        <p>Share this works!</p>
+        <h3>Share this works!</h3>
         <p>We believe knowledge is power and can lead to positive change.</p>
-        <a href="#popup" onclick="hide('popup1')">Close</a>
+        <p class="close"><a href="#popup" onclick="hide('popup1')">Close</a></p>
       </div>
 
       <div class="popup" id="popup2">
-        <p>Keep learning about housing</p>
+        <h3>Keep learning about housing</h3>
         <p>
           The best way to support your action is to keep informed. You can
-          engage with similar educational materials
+          engage with similar educational materials.
         </p>
-        <p><a href="https://antievictionmap.com/about-the-aemp">AEMP</a></p>
-        <a href="#popup2" onclick="hide('popup2')">Close</a>
+        <p class="links">Anti-Eviction Mapping Project: <a href="https://antievictionmap.com/about-the-aemp">AEMP</a></p>
+        <p class="close"><a href="#popup2" onclick="hide('popup2')">Close</a></p>
       </div>
 
       <div class="popup" id="popup3">
-        <p>Connect with a nonprofit</p>
+        <h3>Connect with a nonprofit</h3>
         <p>
           There are numerous organizations you can support and volunteer with to
           help those impacted by the Affordable Housing Crisis. The list below
           is some local to the Richmond area.
         </p>
-        <p>
+        <p class="links">
           <a href="https://www.richmondland.org/get-involved">RichmondLand</a>
         </p>
-        <p>
+        <p class="links">
           <a href="https://richmondnhs.org/"
             >Richmond Neighborhood Housing Services</a
           >
         </p>
-        <p><a href="https://baylegal.org/">Bay Area Legal Aid</a></p>
+        <p class="links"><a href="https://baylegal.org/">Bay Area Legal Aid</a></p>
 
-        <a href="#popup3" onclick="hide('popup3')">Close</a>
+        <p class="close"><a href="#popup3" onclick="hide('popup3')">Close</a></p>
       </div>
 
       <div class="popup" id="popup4">
-        <p>Be politically involved</p>
+        <h3>Be politically involved</h3>
         <p>
           So much of this crisis is enforced by policy. Your vote on zoning
           laws, and other housing related policy matters—getting politically
           involved is a way to shape the future. Here is a list of resources for
           to understand and protect housing rights.
         </p>
-        <a href="#popup4" onclick="hide('popup4')">Close</a>
+        <p class="close"><a href="#popup4" onclick="hide('popup4')">Close</a></p>
       </div>
 
       <div class="popup" id="popup5">
-        <p>Get to know Richmond</p>
+        <h3>Get to know Richmond</h3>
         <p>
           Understand the city's vis-a-vis housing by learning about it's rich
           history. Here are a few options.
         </p>
-        <p>
+        <p class="links">
           Take the
           <a href="https://eastbayyesterday.com/"
             >East Bay Yesterday walking tour</a
           >.
         </p>
-        <p>
+        <p class="links">
           Visit the
           <a href="https://richmondmuseum.org/"
             >Richmond Museum of History & Culture</a
           >.
         </p>
-        <a href="#popup5" onclick="hide('popup5')">Close</a>
+        <p class="close"><a href="#popup5" onclick="hide('popup5')">Close</a></p>
       </div>
     </div>
 
