update disparate impacts viz

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </p>
         <div class="blank_sm"></div>
         <div style="display: flex; justify-content: center">
-          <img src="staticFiles\images\disparity\Disparate Impacts Viz.svg" />
+          <img src="staticFiles\images\disparity\Disparate Impacts Viz.png" />
         </div>
         <div class="blank_sm"></div>
         <p>
