fix pop up; update disparate viz

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           src="staticFiles\images\richmond\Richmond_CA.jpg"
           style="max-width: 45vw; position: relative; left: 2vw"
         />
-        <p class="credit" style="width: 97%">
+        <p class="credit" style="width: 97%;">
           Photo credit:
           <a href="https://en.wikipedia.org/wiki/Richmond,_California"
             >Richmond, CA Wikipedia</a
@@ -187,7 +187,7 @@
         </p>
         <div class="blank_sm"></div>
         <div style="display: flex; justify-content: center">
-          <img src="staticFiles\images\disparity\Disparate Impacts Viz.png" />
+          <img src="staticFiles\images\disparity\Disparate Impacts Viz.svg" />
         </div>
         <div class="blank_sm"></div>
         <p>
@@ -644,7 +644,6 @@
           </p>
         </div>
         <div class="blank_sm"></div>
-        <div class="blank_sm"></div>
         <h3>Community</h3>
         <p>
           The community plays an important role in how local governments
@@ -684,10 +683,12 @@
           total development cost— a high percentage considering the additional
           cost of land, labor, and materials.
         </p>
-        <img
-          style="max-width: 45vw; position: relative; left: 10%"
-          src="staticFiles\images\issues_today\dev_cost.svg"
-        />
+        <div style="width: 100%; display: flex; justify-content: center">
+          <img
+            style="max-width: 45vw"
+            src="staticFiles\images\issues_today\dev_cost.svg"
+          />
+        </div>
         <p>
           Multifamily development is increasingly being conducted by large
           corporations who have easy access to funding, rather than smaller,
@@ -827,8 +828,13 @@
           The best way to support your action is to keep informed. You can
           engage with similar educational materials.
         </p>
-        <p class="links">Anti-Eviction Mapping Project: <a href="https://antievictionmap.com/about-the-aemp">AEMP</a></p>
-        <p class="close"><a href="#popup2" onclick="hide('popup2')">Close</a></p>
+        <p class="links">
+          Anti-Eviction Mapping Project:
+          <a href="https://antievictionmap.com/about-the-aemp">AEMP</a>
+        </p>
+        <p class="close">
+          <a href="#popup2" onclick="hide('popup2')">Close</a>
+        </p>
       </div>
 
       <div class="popup" id="popup3">
@@ -846,9 +852,13 @@
             >Richmond Neighborhood Housing Services</a
           >
         </p>
-        <p class="links"><a href="https://baylegal.org/">Bay Area Legal Aid</a></p>
+        <p class="links">
+          <a href="https://baylegal.org/">Bay Area Legal Aid</a>
+        </p>
 
-        <p class="close"><a href="#popup3" onclick="hide('popup3')">Close</a></p>
+        <p class="close">
+          <a href="#popup3" onclick="hide('popup3')">Close</a>
+        </p>
       </div>
 
       <div class="popup" id="popup4">
@@ -859,7 +869,9 @@
           involved is a way to shape the future. Here is a list of resources for
           to understand and protect housing rights.
         </p>
-        <p class="close"><a href="#popup4" onclick="hide('popup4')">Close</a></p>
+        <p class="close">
+          <a href="#popup4" onclick="hide('popup4')">Close</a>
+        </p>
       </div>
 
       <div class="popup" id="popup5">
@@ -880,7 +892,9 @@
             >Richmond Museum of History & Culture</a
           >.
         </p>
-        <p class="close"><a href="#popup5" onclick="hide('popup5')">Close</a></p>
+        <p class="close">
+          <a href="#popup5" onclick="hide('popup5')">Close</a>
+        </p>
       </div>
     </div>
 
