--- a/about.html
+++ b/about.html
@@ -92,10 +92,10 @@
       <h2>Aiste Cechaviciute </h2>
       <p> </p>
       <h2>Angela Liu</h2>
-      <p>Angela Liu is a data engineer and data scientist interested in building data systems that improve delivery of
-        nonprofit and
-        public services.
-        Prior to her Masters, Angela worked to improve the US healthcare system in both a management consulting and
+      <p><a href="https://liuange.github.io/" target="_">Angela Liu</a> is a data engineer and data scientist interested
+        in building systems that improve delivery of
+        nonprofit and public services. Prior to her Masters, Angela worked to improve the US healthcare system in both a
+        management consulting and
         nonprofit
         capacity.</p>
       <h2>Rui Li</h2>
@@ -105,9 +105,17 @@
         Certificate in New Media from the Berkeley Center for New Media. Before her graduate studies, Gareen worked in
         journalism and digital media as a Story Producer.</p>
       <h2>Ian Castro</h2>
-      <p> </p>
+      <p><a href="https://castroian.github.io/" target="_">Ian Castro</a> is an applied data scientist with a background
+        in
+        investigative journalism, education policy, and eviction
+        research. Ian’s work focuses on building equity and accessibility of information in marginalized communities.
+      </p>
       <h2>Shahan Shahid Nawaz</h2>
-      <p> </p>
+      <p><a href="https://shahanshahidnawaz.github.io/" target="_">Shahan Shahid</a> is a data scientist interested in
+        journalism, data visualization, and problem solving. Shahan
+        has applied data science experience in multiple contexts including development economics, philanthropy in Asia,
+        and
+        zoning reform in California among others.</p>
 
 
 
