added citation and about info

--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@
             And yet, current and historical practices of exclusionary policy,
             rising rents, and slow development have contributed to the
             affordable housing shortage, inequitable evictions, and broad
-            displacement that make up the “housing crisis” today. Whether or not
+            displacement that make up the <a
+            aria-describedby="footnote-label"
+            href="sources.html#ref1"
+            id="footnotes-ref1"
+          >“housing crisis”</a> today. Whether or not
             you’ve heard of this term, it's important to understand the elements
             that make this such a complex problem.
           </p>
@@ -129,9 +133,17 @@
             feels like the average American city. A small, working-class
             suburban community, it went through a period of post-WWII
             industrialization and has a vibrant town known for grassroots
-            engagement, including in the housing space.
+            engagement, including in the housing space.<a
+            aria-describedby="footnote-label"
+            href="sources.html#ref2"
+            id="footnotes-ref2"
+          > </a>
           </p>
-          <h3>Richmond by the Numbers:</h3>
+          <h3>Richmond by the Numbers:<a
+            aria-describedby="footnote-label"
+            href="sources.html#ref3"
+            id="footnotes-ref3"
+          > </a></h3>
           <div>
             <object
               type="image/svg+xml"
@@ -146,7 +158,7 @@
           src="staticFiles\images\richmond\Richmond_CA.jpg"
           style="max-width: 45vw; position: relative; left: 2vw"
         />
-        <p class="credit" style="width: 97%;">
+        <p class="credit" style="width: 97%">
           Photo credit:
           <a href="https://en.wikipedia.org/wiki/Richmond,_California"
             >Richmond, CA Wikipedia</a
@@ -538,8 +550,6 @@
       frameborder="0"
     ></iframe>
 
-    <div class="blank_sm"></div>
-
     <div
       class="tableauPlaceholder"
       id="viz1683485715948"
@@ -617,7 +627,11 @@
           national and local complaint. Richmond's county (Contra Costa), for
           example, has been criticized in particular for not following through
           on project expectations by disproportionately falling short of
-          developing housing for lower-income households.
+          developing housing for lower-income households. <a
+          aria-describedby="footnote-label"
+          href="sources.html#ref4"
+          id="footnotes-ref4"
+        > </a>
         </p>
 
         <img
@@ -635,12 +649,20 @@
           >
             The trend that Contra Costa County exhibits here of
             disproportionally under-developing housing planned for very low and
-            low income households mirrors the rest of the Bay Area. The
+            low income households mirrors the rest of the Bay Area.<a
+            aria-describedby="footnote-label"
+            href="sources.html#ref5"
+            id="footnotes-ref5"
+          > </a> The
             Association of Bay Area Governments (ABAG), sets goals for housing
             developments based on population growth and housing needs. Between
             2007 and 2014, the Great Recession affected the ability to finance
             affordable housing, and was further impacted by an overall decrease
-            in funding from state and federal sources.
+            in funding from state and federal sources.<a
+            aria-describedby="footnote-label"
+            href="sources.html#ref6"
+            id="footnotes-ref6"
+          > </a>
           </p>
         </div>
         <div class="blank_sm"></div>
@@ -648,13 +670,21 @@
         <p>
           The community plays an important role in how local governments
           implement plans. Housing bonds fund loans for developers to create
-          affordable housing— all this must be approved by voters. Community
+          affordable housing— all this must be approved by voters<a
+          aria-describedby="footnote-label"
+          href="sources.html#ref7"
+          id="footnotes-ref7"
+        >.</a> Community
           engagement on local and neighborhood plans affect the housing goals of
           the city and county overall. For example, opposition against
           multifamily development by current residents, commonly referred to as
           “Not in My Backyard” (NIMBY) opposition, impacts the development
           timeline of projects by an average of 7.4 months and adds an average
-          5.6% increase in total development costs. Community engagement can
+          5.6% increase in total development costs<a
+          aria-describedby="footnote-label"
+          href="sources.html#ref8"
+          id="footnotes-ref8"
+        >.</a> Community engagement can
           also inspire funding to go to projects that support communities
           aspirations, such as creating affordable housing.
         </p>
@@ -675,19 +705,33 @@
           tangible expense to the project. This creates a lack of incentive and
           opportunity for developers to build affordable, multifamily housing.
         </p>
-        <p>
-          Conflicting standards across regulations and overly time consuming
-          review processes are inflating the cost of development, limiting who
-          can afford to contribute to multifamily housing. At present,
-          regulation compliance constitutes an average of 40% of a project's
-          total development cost— a high percentage considering the additional
-          cost of land, labor, and materials.
-        </p>
+
         <div style="width: 100%; display: flex; justify-content: center">
           <img
             style="max-width: 45vw"
             src="staticFiles\images\issues_today\dev_cost.svg"
           />
+        </div>
+        <div style="display: flex; justify-content: center">
+          <p
+            style="
+              width: 80%;
+              line-height: 1.1;
+              font-size: 14px;
+              color: var(--gray-dark);
+            "
+          >
+            Conflicting standards across regulations and overly time consuming
+            review processes are inflating the cost of development, limiting who
+            can afford to contribute to multifamily housing. At present,
+            regulation compliance constitutes an average of 40% of a project's
+            total development cost<a
+            aria-describedby="footnote-label"
+            href="sources.html#ref9"
+            id="footnotes-ref9"
+          ></a> — a high percentage considering the additional
+            cost of land, labor, and materials.
+          </p>
         </div>
         <p>
           Multifamily development is increasingly being conducted by large
@@ -712,7 +756,11 @@
         <p>
           Below, we’ve summarized these interventions across three themes:
           <span class="emphasis_p"
-            >Production, Preservation, and Protection.</span
+            >Production, Preservation, and Protection.<a
+            aria-describedby="footnote-label"
+            href="sources.html#ref10"
+            id="footnotes-ref10"
+          ></a></span
           >
           We need movement across all of these areas and more; as we see
           earlier, some of these solutions can seem to be in direct conflict.
@@ -805,11 +853,10 @@
         <p>
           Thank you for allowing us to educate you on the housing crisis. If you
           are feeling empowered and ready to do more, we’ve compiled a list of
-          next steps.
-        </p>
-        <p>
-          A future of affordable housing is possible through action— we hope you
-          continue your journey.
+          next steps. We invite you to <b>peak through the windows</b> of the
+          multi-family dwelling below to learn what actionable steps you can
+          take to facilitate a future of affordable housing for all. We’re all
+          on this journey together.
         </p>
       </div>
     </div>
